Supply type information